--- a/web/index.html
+++ b/web/index.html
@@ -23,10 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="ventory">
+  <meta name="apple-mobile-web-app-title" content="base_app">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>ventory</title>
+  <title>base_app</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
